--- a/Sources/CMakeLists.txt
+++ b/Sources/CMakeLists.txt
@@ -1,12 +1,16 @@
 # Target name
-set (target Sources)
+set(target gui)
 
+# Find packages
 find_package(OpenGL REQUIRED)
+if (CMAKE_CXX_COMPILER_ID MATCHES "GNU" OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    find_package(glfw3 REQUIRED)
+    find_package(OpenAL REQUIRED)
+endif()
 
 # Includes
 include_directories(${CMAKE_SOURCE_DIR}/Includes)
 include_directories(${CMAKE_SOURCE_DIR}/Libraries/glfw/include)
-include_directories(${CMAKE_SOURCE_DIR}/Libraries/glad)
 include_directories(${CMAKE_SOURCE_DIR}/Libraries/imgui)
 include_directories(${CMAKE_SOURCE_DIR}/Libraries/SFML/include)
 include_directories(${OPENGL_INCLUDE_DIR})
@@ -18,6 +22,20 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
 else()
     link_libraries(glfw)
 endif()
+if (CMAKE_SYSTEM_NAME MATCHES "Windows")
+    set(SFML_LIBRARIES_PATH ${CMAKE_SOURCE_DIR}/Libraries/SFML/lib/Windows)
+    set(SFML_OPENAL_DEPENDENCIES openal32)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Linux")
+    set(SFML_LIBRARIES_PATH ${CMAKE_SOURCE_DIR}/Libraries/SFML/lib/Linux)
+    set(SFML_OPENGL_DEPENDENCIES GL)
+    set(SFML_OPENAL_DEPENDENCIES openal)
+elseif (CMAKE_SYSTEM_NAME MATCHES "Darwin")
+    set(SFML_LIBRARIES_PATH ${CMAKE_SOURCE_DIR}/Libraries/SFML/lib/MacOS)
+    set(SFML_OPENGL_DEPENDENCIES "-framework OpenGL")
+    set(SFML_OPENAL_DEPENDENCIES ${OPENAL_LIBRARY})
+endif()
+link_directories(${SFML_LIBRARIES_PATH})
+set(SFML_LIBRARY_DEPENDENCIES sfml-audio sfml-graphics sfml-network sfml-system sfml-window)
 
 # Includes
 include_directories(
@@ -32,16 +50,10 @@ file(GLOB_RECURSE headers
 file(GLOB_RECURSE sources
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 
-    
 # Build executable
 add_executable(${target}
     ${sources})
 
-# Project options
-set_target_properties(${target}
-    PROPERTIES
-    ${DEFAULT_PROJECT_OPTIONS}
-)
 
 # Compile options
 target_compile_options(${target}
@@ -52,7 +64,10 @@ target_compile_options(${target}
 
     INTERFACE
 )
-
+target_compile_definitions(${target}
+    PRIVATE
+    IMAGES_DIR="${CMAKE_SOURCE_DIR}/Assets/Images/"
+)
 # Link libraries
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     target_link_libraries(${target}
